[RED] Integrate table service with order service