@@ -1,39 +1,65 @@
 package id.ac.ui.cs.advprog.tableservicerizzerve.service;
 
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import id.ac.ui.cs.advprog.tableservicerizzerve.dto.MejaEvent;
+import id.ac.ui.cs.advprog.tableservicerizzerve.dto.MejaWithOrderResponse;
+import id.ac.ui.cs.advprog.tableservicerizzerve.dto.OrderDataForTableDto;
+import id.ac.ui.cs.advprog.tableservicerizzerve.dto.OrderItemSummaryDto;
 import id.ac.ui.cs.advprog.tableservicerizzerve.enums.MejaStatus;
-import id.ac.ui.cs.advprog.tableservicerizzerve.exception.*;
-import id.ac.ui.cs.advprog.tableservicerizzerve.model.Meja;
-import id.ac.ui.cs.advprog.tableservicerizzerve.observer.MejaEvent;
+import id.ac.ui.cs.advprog.tableservicerizzerve.exception.DuplicateNomorMejaException;
+import id.ac.ui.cs.advprog.tableservicerizzerve.exception.InvalidMejaStatusException;
+import id.ac.ui.cs.advprog.tableservicerizzerve.exception.InvalidNomorMejaException;
+import id.ac.ui.cs.advprog.tableservicerizzerve.exception.MejaNotFoundException;
 import id.ac.ui.cs.advprog.tableservicerizzerve.observer.MejaEventPublisher;
+import id.ac.ui.cs.advprog.tableservicerizzerve.model.Meja;
 import id.ac.ui.cs.advprog.tableservicerizzerve.repository.MejaRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.io.IOException;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 
+@ExtendWith(MockitoExtension.class)
 class MejaServiceTest {
 
+    @Mock
     private MejaRepository mejaRepository;
+
+    @Mock
     private MejaEventPublisher eventPublisher;
+
+    @Mock
+    private ObjectMapper objectMapper;
+
+    @InjectMocks
     private MejaServiceImpl mejaService;
 
     @BeforeEach
     void setUp() {
-        mejaRepository = mock(MejaRepository.class);
-        eventPublisher = mock(MejaEventPublisher.class);
-        mejaService    = new MejaServiceImpl(mejaRepository, eventPublisher);
     }
 
     @Test
     void testCreateMejaSuccess() {
         when(mejaRepository.findByNomorMeja(5)).thenReturn(Optional.empty());
-        when(mejaRepository.save(any(Meja.class))).thenAnswer(i -> i.getArgument(0));
+        when(mejaRepository.save(any(Meja.class))).thenAnswer(i -> {
+            Meja meja = i.getArgument(0);
+            meja.setId(UUID.randomUUID());
+            return meja;
+        });
+        doNothing().when(eventPublisher).publish(any(MejaEvent.class));
 
         Meja result = mejaService.createMeja(5, MejaStatus.TERSEDIA.getValue());
 
@@ -49,6 +75,7 @@ class MejaServiceTest {
     void testCreateMejaWithNullStatusDefaultsToTersedia() {
         when(mejaRepository.findByNomorMeja(1)).thenReturn(Optional.empty());
         when(mejaRepository.save(any(Meja.class))).thenAnswer(i -> i.getArgument(0));
+        doNothing().when(eventPublisher).publish(any(MejaEvent.class));
 
         Meja result = mejaService.createMeja(1, null);
 
@@ -58,18 +85,22 @@ class MejaServiceTest {
     @Test
     void testCreateMejaInvalidNomorShouldThrow() {
         assertThrows(InvalidNomorMejaException.class, () -> mejaService.createMeja(0, MejaStatus.TERSEDIA.getValue()));
+        verify(eventPublisher, never()).publish(any(MejaEvent.class));
     }
 
     @Test
     void testCreateMejaInvalidStatusShouldThrow() {
         when(mejaRepository.findByNomorMeja(1)).thenReturn(Optional.empty());
         assertThrows(InvalidMejaStatusException.class, () -> mejaService.createMeja(1, "BAD_STATUS"));
+        verify(eventPublisher, never()).publish(any(MejaEvent.class));
     }
 
     @Test
     void testCreateMejaDuplicateNomorShouldThrow() {
-        when(mejaRepository.findByNomorMeja(5)).thenReturn(Optional.of(new Meja(5, MejaStatus.TERSEDIA.getValue())));
+        Meja existingMeja = new Meja(5, MejaStatus.TERSEDIA.getValue());
+        when(mejaRepository.findByNomorMeja(5)).thenReturn(Optional.of(existingMeja));
         assertThrows(DuplicateNomorMejaException.class, () -> mejaService.createMeja(5, MejaStatus.TERSEDIA.getValue()));
+        verify(eventPublisher, never()).publish(any(MejaEvent.class));
     }
 
     @Test
@@ -87,49 +118,71 @@ class MejaServiceTest {
     }
 
     @Test
-    void testUpdateMejaSuccess() {
+    void testUpdateMejaSuccessNomorAndStatusChanged() {
         UUID id = UUID.randomUUID();
         Meja stored = new Meja(1, MejaStatus.TERSEDIA.getValue());
         stored.setId(id);
+
         when(mejaRepository.findById(id)).thenReturn(Optional.of(stored));
         when(mejaRepository.findByNomorMeja(9)).thenReturn(Optional.empty());
         when(mejaRepository.save(any(Meja.class))).thenAnswer(i -> i.getArgument(0));
+        doNothing().when(eventPublisher).publish(any(MejaEvent.class));
 
         Meja result = mejaService.updateMeja(id, 9, MejaStatus.TERPAKAI.getValue());
 
         assertEquals(9, result.getNomorMeja());
         assertEquals(MejaStatus.TERPAKAI.getValue(), result.getStatus());
-        verify(eventPublisher, atLeastOnce()).publish(any(MejaEvent.class));
+        verify(eventPublisher, times(2)).publish(any(MejaEvent.class));
+    }
+
+    @Test
+    void testUpdateMejaSuccessOnlyNomorChanged() {
+        UUID id = UUID.randomUUID();
+        Meja stored = new Meja(1, MejaStatus.TERSEDIA.getValue());
+        stored.setId(id);
+
+        when(mejaRepository.findById(id)).thenReturn(Optional.of(stored));
+        when(mejaRepository.findByNomorMeja(9)).thenReturn(Optional.empty());
+        when(mejaRepository.save(any(Meja.class))).thenAnswer(i -> i.getArgument(0));
+        doNothing().when(eventPublisher).publish(any(MejaEvent.class));
+
+        Meja result = mejaService.updateMeja(id, 9, MejaStatus.TERSEDIA.getValue());
+
+        assertEquals(9, result.getNomorMeja());
+        assertEquals(MejaStatus.TERSEDIA.getValue(), result.getStatus());
+        verify(eventPublisher, times(1)).publish(argThat(event -> event.getType() == MejaEvent.Type.UPDATED_NOMOR));
+    }
+
+    @Test
+    void testUpdateMejaSuccessOnlyStatusChanged() {
+        UUID id = UUID.randomUUID();
+        Meja stored = new Meja(1, MejaStatus.TERSEDIA.getValue());
+        stored.setId(id);
+
+        when(mejaRepository.findById(id)).thenReturn(Optional.of(stored));
+        when(mejaRepository.save(any(Meja.class))).thenAnswer(i -> i.getArgument(0));
+        doNothing().when(eventPublisher).publish(any(MejaEvent.class));
+
+        Meja result = mejaService.updateMeja(id, 1, MejaStatus.TERPAKAI.getValue());
+
+        assertEquals(1, result.getNomorMeja());
+        assertEquals(MejaStatus.TERPAKAI.getValue(), result.getStatus());
+        verify(eventPublisher, times(1)).publish(argThat(event -> event.getType() == MejaEvent.Type.UPDATED_STATUS));
     }
 
     @Test
     void testUpdateMejaDuplicateNomorThrows() {
         UUID id = UUID.randomUUID();
         Meja stored   = new Meja(3,  MejaStatus.TERSEDIA.getValue());
-        Meja conflict = new Meja(7,  MejaStatus.TERSEDIA.getValue());
         stored.setId(id);
-        conflict.setId(UUID.randomUUID());
+        Meja conflict = new Meja(7,  MejaStatus.TERSEDIA.getValue());
+        conflict.setId(UUID.randomUUID()); // ID berbeda
+
         when(mejaRepository.findById(id)).thenReturn(Optional.of(stored));
         when(mejaRepository.findByNomorMeja(7)).thenReturn(Optional.of(conflict));
 
         assertThrows(DuplicateNomorMejaException.class, () -> mejaService.updateMeja(id, 7, MejaStatus.TERSEDIA.getValue()));
-    }
-
-    @Test
-    void testUpdateMejaNoConflictWhenSameNumber() {
-        UUID id = UUID.randomUUID();
-        Meja stored = new Meja(5, MejaStatus.TERSEDIA.getValue());
-        stored.setId(id);
-
-        when(mejaRepository.findById(id)).thenReturn(Optional.of(stored));
-        when(mejaRepository.findByNomorMeja(5)).thenReturn(Optional.of(stored));
-        when(mejaRepository.save(any(Meja.class))).thenAnswer(i -> i.getArgument(0));
-
-        Meja result = mejaService.updateMeja(id, 5, MejaStatus.TERPAKAI.getValue());
-
-        assertEquals(5, result.getNomorMeja());
-        assertEquals(MejaStatus.TERPAKAI.getValue(), result.getStatus());
-        verify(mejaRepository).findByNomorMeja(5);
+        verify(eventPublisher, never()).publish(any(MejaEvent.class));
     }
 
     @Test
@@ -137,6 +190,7 @@ class MejaServiceTest {
         UUID id = UUID.randomUUID();
         when(mejaRepository.findById(id)).thenReturn(Optional.empty());
         assertThrows(MejaNotFoundException.class, () -> mejaService.updateMeja(id, 5, MejaStatus.TERSEDIA.getValue()));
+        verify(eventPublisher, never()).publish(any(MejaEvent.class));
     }
 
     @Test
@@ -147,6 +201,7 @@ class MejaServiceTest {
         when(mejaRepository.findById(id)).thenReturn(Optional.of(stored));
 
         assertThrows(InvalidNomorMejaException.class, () -> mejaService.updateMeja(id, 0, MejaStatus.TERSEDIA.getValue()));
+        verify(eventPublisher, never()).publish(any(MejaEvent.class));
     }
 
     @Test
@@ -155,7 +210,8 @@ class MejaServiceTest {
         Meja existing = new Meja(4, MejaStatus.TERSEDIA.getValue());
         existing.setId(id);
         when(mejaRepository.findById(id)).thenReturn(Optional.of(existing));
-        doNothing().when(mejaRepository).delete(existing);
+        doNothing().when(mejaRepository).delete(existing); // Mock void method
+        doNothing().when(eventPublisher).publish(any(MejaEvent.class));
 
         mejaService.deleteMeja(id);
 
@@ -168,6 +224,7 @@ class MejaServiceTest {
         UUID id = UUID.randomUUID();
         when(mejaRepository.findById(id)).thenReturn(Optional.empty());
         assertThrows(MejaNotFoundException.class, () -> mejaService.deleteMeja(id));
+        verify(eventPublisher, never()).publish(any(MejaEvent.class));
     }
 
     @Test
@@ -200,11 +257,12 @@ class MejaServiceTest {
         when(mejaRepository.findById(id)).thenReturn(Optional.of(stored));
 
         assertThrows(InvalidMejaStatusException.class, () -> mejaService.updateMeja(id, 1, "BAD_STATUS"));
+        verify(eventPublisher, never()).publish(any(MejaEvent.class));
     }
 
     @Test
     void testFindAllMejaEmpty() {
-        when(mejaRepository.findAll()).thenReturn(List.of());
+        when(mejaRepository.findAll()).thenReturn(Collections.emptyList());
 
         List<Meja> result = mejaService.findAllMeja();
 
@@ -214,16 +272,96 @@ class MejaServiceTest {
     }
 
     @Test
-    void testFindByIdPresent() {
-        UUID id = UUID.randomUUID();
-        when(mejaRepository.findById(id)).thenReturn(Optional.of(new Meja(6,"TERSEDIA")));
-        assertTrue(mejaService.findById(id).isPresent());
+    void testFindByIdMejaFoundNoActiveOrder() throws IOException {
+        UUID mejaId = UUID.randomUUID();
+        Meja meja = new Meja(1, MejaStatus.TERSEDIA.getValue());
+        meja.setId(mejaId);
+
+        when(mejaRepository.findById(mejaId)).thenReturn(Optional.of(meja));
+
+        MejaWithOrderResponse response = mejaService.findById(mejaId);
+
+        assertNotNull(response);
+        assertEquals(mejaId, response.getMejaId());
+        assertEquals(1, response.getNomorMeja());
+        assertEquals(MejaStatus.TERSEDIA.getValue(), response.getStatusMeja());
+        assertNull(response.getCurrentOrder());
+        verify(mejaRepository).findById(mejaId);
+        verify(objectMapper, never()).readValue(anyString(), any(TypeReference.class));
     }
 
     @Test
-    void testFindByIdEmpty() {
-        UUID id = UUID.randomUUID();
-        when(mejaRepository.findById(id)).thenReturn(Optional.empty());
-        assertTrue(mejaService.findById(id).isEmpty());
+    void testFindByIdMejaFoundWithActiveOrder() throws IOException {
+        UUID mejaId = UUID.randomUUID();
+        UUID orderId = UUID.randomUUID();
+        Meja meja = new Meja(2, MejaStatus.TERPAKAI.getValue());
+        meja.setId(mejaId);
+        meja.setActiveOrderId(orderId);
+        meja.setActiveOrderStatus("PROCESSING");
+        meja.setActiveOrderTotalPrice(150.0);
+        String itemsJson = "[{\"menuItemId\":\"ec0889ee-50c9-4c7e-8504-d73abeded35f\",\"menuItemName\":\"Nasi Goreng\",\"quantity\":1,\"price\":75.0,\"subtotal\":75.0}," +
+                "{\"menuItemId\":\"40581f2b-fa1d-4ab2-8f3f-5c233d60e8e9\",\"menuItemName\":\"Es Teh\",\"quantity\":1,\"price\":75.0,\"subtotal\":75.0}]";
+        meja.setActiveOrderItemsJson(itemsJson);
+
+        List<OrderItemSummaryDto> expectedItems = List.of(
+                OrderItemSummaryDto.builder().menuItemId(UUID.fromString("ec0889ee-50c9-4c7e-8504-d73abeded35f")).menuItemName("Nasi Goreng").quantity(1).price(75.0).subtotal(75.0).build(),
+                OrderItemSummaryDto.builder().menuItemId(UUID.fromString("40581f2b-fa1d-4ab2-8f3f-5c233d60e8e9")).menuItemName("Es Teh").quantity(1).price(75.0).subtotal(75.0).build()
+        );
+
+        when(mejaRepository.findById(mejaId)).thenReturn(Optional.of(meja));
+        when(objectMapper.readValue(eq(itemsJson), any(TypeReference.class))).thenReturn(expectedItems);
+
+        MejaWithOrderResponse response = mejaService.findById(mejaId);
+
+        assertNotNull(response);
+        assertEquals(mejaId, response.getMejaId());
+        assertEquals(2, response.getNomorMeja());
+        assertEquals(MejaStatus.TERPAKAI.getValue(), response.getStatusMeja());
+
+        assertNotNull(response.getCurrentOrder());
+        OrderDataForTableDto currentOrder = response.getCurrentOrder();
+        assertEquals(orderId, currentOrder.getOrderId());
+        assertEquals("PROCESSING", currentOrder.getOrderStatus());
+        assertEquals(150.0, currentOrder.getTotalPrice());
+        assertNotNull(currentOrder.getItems());
+        assertEquals(2, currentOrder.getItems().size());
+        assertEquals("Nasi Goreng", currentOrder.getItems().get(0).getMenuItemName());
+
+        verify(mejaRepository).findById(mejaId);
+        verify(objectMapper).readValue(eq(itemsJson), any(TypeReference.class));
+    }
+
+    @Test
+    void testFindByIdMejaFoundActiveOrder() throws IOException {
+        UUID mejaId = UUID.randomUUID();
+        UUID orderId = UUID.randomUUID();
+        Meja meja = new Meja(3, MejaStatus.TERPAKAI.getValue());
+        meja.setId(mejaId);
+        meja.setActiveOrderId(orderId);
+        meja.setActiveOrderStatus("NEW");
+        meja.setActiveOrderTotalPrice(0.0);
+        meja.setActiveOrderItemsJson(null);
+
+        when(mejaRepository.findById(mejaId)).thenReturn(Optional.of(meja));
+
+        MejaWithOrderResponse response = mejaService.findById(mejaId);
+
+        assertNotNull(response);
+        assertEquals(mejaId, response.getMejaId());
+        assertNotNull(response.getCurrentOrder());
+        assertEquals(orderId, response.getCurrentOrder().getOrderId());
+        assertTrue(response.getCurrentOrder().getItems().isEmpty());
+
+        verify(mejaRepository).findById(mejaId);
+        verify(objectMapper, never()).readValue(anyString(), any(TypeReference.class));
+    }
+
+    @Test
+    void testFindByIdMejaNotFound() {
+        UUID nonExistentId = UUID.randomUUID();
+        when(mejaRepository.findById(nonExistentId)).thenReturn(Optional.empty());
+
+        assertThrows(MejaNotFoundException.class, () -> mejaService.findById(nonExistentId));
+        verify(mejaRepository).findById(nonExistentId);
     }
 }
